--- a/data/tabular/melting_points/meta.yaml
+++ b/data/tabular/melting_points/meta.yaml
@@ -13,7 +13,7 @@ targets:
     - id: mp_range
       description: melting point range
       units: deg C
-      type: continuous
+      type: text
       names:
           - noun: melting point range
 benchmarks: []
@@ -59,10 +59,10 @@ templates:
       {#Answer: |A: |!}{#The melting point is |!}{mp#} deg C.
     - |-
       {#Question: |Q: !}What is the melting point of {NAME#}?
-      {#Answer: |A: |!}{#The melting point is in the range|!}{mp_range#} deg C.
+      {#Answer: |A: |!}{#The melting point is in the range |!}{mp_range#} deg C.
     - |-
       {#Question: |Q: !}What is the melting point of a {#molecule|compound!} with the {SMILES__description} {SMILES#}?
-      {#Answer: |A: |!}{#The melting point is in the range|!}{mp_range#} deg C.
+      {#Answer: |A: |!}{#The melting point is in the range |!}{mp_range#} deg C.
     - |-
       {#Question: |Q: !}What is a compound with a melting point of {mp#} deg C?
       {#Answer: |A: |!}{NAME#}
