--- a/data/tabular/RedDB/meta.yaml
+++ b/data/tabular/RedDB/meta.yaml
@@ -11,111 +11,107 @@ description: |-
     (iii) aqueous solubility prediction using machine learning,
     (iv) data processing and database creation, have been described.
 targets:
-    - id: solubilityAqSolPred
-      description: Aqueous solubility prediction using machine learning
-      units: logS
-      type: continuous
-      significant_figures: 3
-      names:
-          - noun: ML-predicted aqueous solubility
-      sample: false
     - id: molecularSurface
       description: Total surface area of a molecule
       units: \AA^2
       type: continuous
-      significant_figures: 3
       names:
           - noun: molecular surface area
     - id: reactionFieldEnergy
       description: Energy associated with the interaction during a chemical reaction
       units: kT
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
-          - noun: chemical reaction field energy in aqueous solution modeled with a Poisson-Boltzmann Solvation Model
+          - noun: chemical reaction field energy
     - id: solventAccessSurface
       description: Surface area of a molecule accessible to a solvent
       units: \AA^2
       type: continuous
-      significant_figures: 3
       names:
           - noun: solvent-accessible surface area
     - id: cavityEnergy
       description: Energy associated with the formation of cavities in a molecular structure
       units: kT
       type: continuous
-      significant_figures: 3
       names:
           - noun: cavity formation energy at the PBE level of theory
     - id: gasEnergy
       description: Total energy of a molecule in the gas phase
       units: Hartree
+      significant_digits: 5
       type: continuous
-      significant_figures: 3
       names:
           - noun: gas-phase molecular energy at the PBE level of theory
     - id: gasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of a gas-phase molecule
-
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: gaseous phase HOMO energy at the PBE level of theory
+          - noun: gaseous phase highest occupied molecular orbital energy at the PBE level of theory
+          - noun: gaseous phase highest occupied molecular orbital (HOMO) energy at the PBE level of theory
     - id: gasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of a gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: gaseous phase LUMO energy at the PBE level of theory
+          - noun: gaseous phase lowest unoccupied molecular orbital energy at the PBE level of theory
+          - noun: gaseous phase lowest unoccupied molecular orbital energy (LUMO) at the PBE level of theory
     - id: solutionEnergy
       description: Total energy of a molecule in a solution
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: aqueous phase molecular energy at the PBE level of theory
     - id: solutionHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy in a solution
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: aqueous phase HOMO energy at the PBE level of theory
+          - noun: aqueous phase energy of the highest occupied molecular orbital at the PBE level of theory
+          - noun: aqueous phase energy of the highest occupied molecular orbital (HOMO) at the PBE level of theory
     - id: solutionLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy in a solution
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: aqueous phase LUMO energy at the PBE level of theory
+          - noun: aqueous phase energy of the lowest unoccupied molecular orbital at the PBE level of theory
+          - noun: aqueous phase energy of the lowest unoccupied molecular orbital (LUMO) at the PBE level of theory
     - id: nuclearRepulsionEnergy
       description: Electrostatic repulsion energy between atomic nuclei in a molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: nuclear repulsion energy at the PBE level of theory
     - id: optGasEnergy
       description: Total energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: optimized gas-phase molecular energy at the PBE level of theory
     - id: optGasHomo
       description: Highest Occupied Molecular Orbital (HOMO) energy of an optimized gas-phase molecule
       units: Hartree
       type: continuous
-      significant_figures: 3
+      significant_digits: 5
       names:
           - noun: optimized gas-phase HOMO energy at the PBE level of theory
     - id: optGasLumo
       description: Lowest Unoccupied Molecular Orbital (LUMO) energy of an optimized gas-phase molecule
       units: Hartree
+      significant_digits: 5
       type: continuous
-      significant_figures: 3
       names:
           - noun: optimized gas-phase LUMO energy calculated at the PBE level of theory
           - noun: optimized gas-phase LUMO energy calculated with DFT at the PBE level of theory
@@ -156,7 +152,7 @@ templates:
       of {gasHomo#} {gasHomo__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {gasLumo__names__noun}
       of {gasLumo#} {gasLumo__units}.
-    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {solutionEnergy__names__noun}
+    - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has an {solutionEnergy__names__noun}
       of {solutionEnergy#} {solutionEnergy__units}.
     - The {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} {#representation of |!}{SMILES#} has a {solutionLumo__names__noun}
       of {solutionLumo#} {solutionLumo__units}.
@@ -168,5 +164,5 @@ templates:
       of {optGasHomo#} {optGasHomo__units}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule|compound|chemical|molecular species|chemical compound!} with the {SMILES__description} based on the {#text |!}description{# below|!}.
-            Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and a {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
-            Result: {SMILES#}
+      Description: It has an {solutionLumo__names__noun} {solutionLumo#} {solutionLumo__units} and an {solutionHomo__names__noun} of {solutionHomo#} {solutionHomo__units}.
+      Result: {SMILES#}
