--- a/data/tabular/aminoacids/meta.yaml
+++ b/data/tabular/aminoacids/meta.yaml
@@ -25,16 +25,17 @@ links:
       description: reference for amino acid type
 num_points: 20
 templates:
-    - The {#essential amino acid|amino acid|amino acid (AA)|AA!} with the {SMILES__description} {SMILES#} has a one-letter code {one_letter_code#} and a
-      three-letter code {three_letter_code#}.
-    - The {#essential amino acid|amino acid|amino acid (AA)|AA!} {amino acid_name#} has a one-letter code {one_letter_code#} and a three-letter code {three_letter_code#}.
+    - The {#essential amino acid|amino acid|amino acid (AA)|AA!} with the {SMILES__description} {SMILES#} has the one-letter code {one_letter_code#} and
+      the three-letter code {three_letter_code#}.
+    - The {#essential amino acid|amino acid|amino acid (AA)|AA!} {aminoacid_name#} has the one-letter code {one_letter_code#} and the three-letter code
+      {three_letter_code#}.
     - |-
       Question: What is the one-letter code of the {#essential amino acid|amino acid|amino acid (AA)|AA!} with the {SMILES__description} {SMILES#}?
       Answer: {one_letter_code#}.
     - |-
-      Question: What is the one-letter code of the {#essential amino acid|amino acid|amino acid (AA)|AA!} with the {SMILES__description} {SMILES#}?
+      Question: What is the three-letter code of the {#essential amino acid|amino acid|amino acid (AA)|AA!} with the {SMILES__description} {SMILES#}?
       Answer: {three_letter_code#}.
     - |-
       Question: What is the type of the amino acid with the one-letter code {one_letter_code#} and {SMILES__description} {SMILES#}?
-      Constraint: The possible types are: polar, non-polar, positively charged, negatively charged
+      Constraint: The possible types are: polar, non-polar, positively charged, negatively charged.
       Answer: From the provided amino acid types (polar, non-polar, positively charged, negatively charged), the amino acid with the one-letter code {one_letter_code#} is {type#}.
