--- a/data/tabular/rdkit_features/meta.yaml
+++ b/data/tabular/rdkit_features/meta.yaml
@@ -141,7 +141,7 @@ templates:
       Answer: {Apol#}
     - |-
       User: I want to {#design|create|make|synthesize|analyze!} a {#molecule|compound|chemical!} with a {NumHDonors__names__noun} of {NumHDonors#} and a {NumHAcceptors__names__noun} of {NumHAcceptors#}.
-      Assistant: {#Cool, do|Nice, do|Interesting, do|That's interesting, do|That is a very interesting question, do|Do!} you have some additional {#constraints|requirements|conditions|limitations!}{# I should take into account| that help me narrow down the search| that I should consider| I should consider| I should take into account|!}?
+      Assistant: {#Cool, do|Nice, do|Interesting, do|That's interesting, do|That is a very interesting question, do|Do!} you have some additional {#constraints|requirements|conditions|limitations!}{# I should take into account| that help me narrow down the search| that I should consider| I should consider| I should take into account!}?
       User: {#Yes, |Indeed, |Yeah, |Yea, |Yep, |!}I want the {NumHeteroatoms__names__noun} to be {NumHeteroatoms#}.
       Assistant: {#Then, |In that case, |In that situation, |In that scenario, |!}I {#recommend|suggest|propose|advise!} the {#molecule|compound|chemical!} with {SMILES__description} {SMILES#}.
     - |-
