--- a/data/tabular/mona/meta.yaml
+++ b/data/tabular/mona/meta.yaml
@@ -74,7 +74,7 @@ templates:
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} represents a molecule that has a {spectral_entropy__names__noun} of {spectral_entropy#} {spectral_entropy__units}: {SMILES#}
     - The {spectral_entropy__names__noun} of the molecule with the {SMILES__description} {SMILES#} is:<EOI> {spectral_entropy#} {spectral_entropy__units}
     - The {spectral_entropy__names__noun} of the {SMILES__description} {SMILES#} is:<EOI> {spectral_entropy#} {spectral_entropy__units}
-    - The {spectral_entropy__names__noun} of the molecule with {SMILES__description} {SMILES#} is:<EOI> {spectral_entropy#} {spectral_entropy__units}
+    - The {spectral_entropy__names__noun} of the molecule with the {SMILES__description} {SMILES#} is:<EOI> {spectral_entropy#} {spectral_entropy__units}
     - |-
       Task: Please predict a molecule feature based on the description.
       Description: Predict the {spectral_entropy__names__noun} in {spectral_entropy__units} of a molecule.
