--- a/data/tabular/carcinogens/meta.yaml
+++ b/data/tabular/carcinogens/meta.yaml
@@ -83,7 +83,7 @@ templates:
       Result: This molecule is {carcinogen#not &NULL}{carcinogen__names__adjective}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that is {carcinogen__names__adjective}.
+      Description: A molecule that is {carcinogen#not &NULL}{carcinogen__names__adjective}.
       Result: {SMILES#}
     - |-
       User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {carcinogen__names__adjective}?
