--- a/data/tabular/ames_mutagenicity/meta.yaml
+++ b/data/tabular/ames_mutagenicity/meta.yaml
@@ -71,7 +71,7 @@ templates:
       Result: This molecule is {mutagenic#not &NULL}{mutagenic__names__adjective}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that is {mutagenic__names__adjective}.
+      Description: A molecule that is {mutagenic#not &NULL}{mutagenic__names__adjective}.
       Result: {SMILES#}
     - |-
       User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {mutagenic__names__adjective}?
