--- a/data/tabular/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
+++ b/data/tabular/cav3_t-type_calcium_channels_butkiewicz/meta.yaml
@@ -109,7 +109,7 @@ templates:
       Result: This molecule is {activity_cav3_t_type_calcium_channels#not &NULL}{activity_cav3_t_type_calcium_channels__names__gerund}.
     - |-
       Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
-      Description: A molecule that is {activity_cav3_t_type_calcium_channels__names__gerund}.
+      Description: A molecule that is {activity_cav3_t_type_calcium_channels#not &NULL}{activity_cav3_t_type_calcium_channels__names__gerund}.
       Result: {SMILES#}
     - |-
       User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {activity_cav3_t_type_calcium_channels__names__gerund}?
