--- a/data/tabular/sr_mmp_tox21/meta.yaml
+++ b/data/tabular/sr_mmp_tox21/meta.yaml
@@ -5,7 +5,7 @@ description: |-
   response pathways.
 targets:
   - id: toxicity_SR-MMP
-    description: whether it shows activitiy in the SR-MMP assay (1) or not (0)
+    description: whether it shows activity in the SR-MMP assay (1) or not (0)
     units:
     type: boolean
     names:
